--- a/kind/cluster.yaml
+++ b/kind/cluster.yaml
@@ -2,6 +2,7 @@ kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
 - role: control-plane
+  image: kindest/node:v1.25.0
   kubeadmConfigPatches:
   - |
     kind: InitConfiguration
@@ -16,8 +17,11 @@ nodes:
     hostPort: 443
     protocol: TCP
 - role: worker
+  image: kindest/node:v1.25.0
 - role: worker
+  image: kindest/node:v1.25.0
 - role: worker
+  image: kindest/node:v1.25.0
 
 networking:
   podSubnet: "10.244.0.0/16"
