--- a/manifests/infra/prometheus-operator/base/ingress.yaml
+++ b/manifests/infra/prometheus-operator/base/ingress.yaml
@@ -2,15 +2,17 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
   name: grafana-ingress
   namespace: monitoring
 spec:
   rules:
-  - http:
+  - host: grafana.local.com
+    http:
       paths:
-      - pathType: Prefix
-        path: "/grafana(/|$)(.*)"
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: grafana
