--- a/manifests/infra/prometheus-operator/base/kustomization.yaml
+++ b/manifests/infra/prometheus-operator/base/kustomization.yaml
@@ -1,6 +1,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+# CRDs
+  - https://raw.githubusercontent.com/prometheus-operator/kube-prometheus/v0.10.0/manifests/setup/namespace.yaml
+  - https://raw.githubusercontent.com/prometheus-operator/kube-prometheus/v0.10.0/manifests/setup/0alertmanagerConfigCustomResourceDefinition.yaml
+  - https://raw.githubusercontent.com/prometheus-operator/kube-prometheus/v0.10.0/manifests/setup/0alertmanagerCustomResourceDefinition.yaml
+  - https://raw.githubusercontent.com/prometheus-operator/kube-prometheus/v0.10.0/manifests/setup/0podmonitorCustomResourceDefinition.yaml
+  - https://raw.githubusercontent.com/prometheus-operator/kube-prometheus/v0.10.0/manifests/setup/0probeCustomResourceDefinition.yaml
+  - https://raw.githubusercontent.com/prometheus-operator/kube-prometheus/v0.10.0/manifests/setup/0prometheusCustomResourceDefinition.yaml
+  - https://raw.githubusercontent.com/prometheus-operator/kube-prometheus/v0.10.0/manifests/setup/0prometheusruleCustomResourceDefinition.yaml
+  - https://raw.githubusercontent.com/prometheus-operator/kube-prometheus/v0.10.0/manifests/setup/0servicemonitorCustomResourceDefinition.yaml
+  - https://raw.githubusercontent.com/prometheus-operator/kube-prometheus/v0.10.0/manifests/setup/0thanosrulerCustomResourceDefinition.yaml
 # AlertManager
   - https://raw.githubusercontent.com/prometheus-operator/kube-prometheus/v0.10.0/manifests/alertmanager-alertmanager.yaml
   - https://raw.githubusercontent.com/prometheus-operator/kube-prometheus/v0.10.0/manifests/alertmanager-podDisruptionBudget.yaml
