--- a/manifests/argocd-apps/templates/loki-stack.yaml
+++ b/manifests/argocd-apps/templates/loki-stack.yaml
@@ -4,15 +4,14 @@ metadata:
   name: loki-stack
   namespace: argocd
 spec:
+  destination:
+    server: {{ .Values.spec.destination.server }}
+    namespace: monitoring
   project: default
   source:
     repoURL: https://github.com/grafana/helm-charts.git
     targetRevision: main
     path: charts/loki-stack
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: monitoring
-
   syncPolicy:
     automated:
       prune: true
