--- a/manifests/argocd-apps/templates/tempo.yaml
+++ b/manifests/argocd-apps/templates/tempo.yaml
@@ -4,6 +4,9 @@ metadata:
   name: tempo
   namespace: argocd
 spec:
+  destination:
+    server: {{ .Values.spec.destination.server }}
+    namespace: monitoring
   project: default
   source:
     repoURL: https://github.com/grafana/helm-charts.git
@@ -14,10 +17,6 @@ spec:
         tempo:
           repository: grafana/tempo
           tag: 1.5.0
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: monitoring
-
   syncPolicy:
     automated:
       prune: true
