add scrape config for argocd-metrics

--- a/manifests/argocd-apps/templates/prometheus.yaml
+++ b/manifests/argocd-apps/templates/prometheus.yaml
@@ -23,6 +23,14 @@ spec:
             path: /
             hosts:
               - prometheus.local.com
+        extraScrapeConfigs: |
+          - job_name: 'argocd-metrics'
+            metrics_path: /metrics
+            params:
+              module: [http_2xx]
+            static_configs:
+              - targets:
+                - argocd-metrics.argocd.svc.cluster.local:8082
   syncPolicy:
     automated:
       prune: true
