add remote r/w for prometheus

--- a/manifests/argocd-apps/templates/prometheus.yaml
+++ b/manifests/argocd-apps/templates/prometheus.yaml
@@ -23,6 +23,10 @@ spec:
             path: /
             hosts:
               - prometheus.local.com
+          remoteWrite: 
+          - url: "http://influxdb:8086/api/v1/prom/write?db=prometheus"
+          remoteRead:
+          - url: "http://influxdb:8086/api/v1/prom/read?db=prometheus"
         extraScrapeConfigs: |
           - job_name: 'argocd-metrics'
             metrics_path: /metrics
@@ -31,6 +35,7 @@ spec:
             static_configs:
               - targets:
                 - argocd-metrics.argocd.svc.cluster.local:8082
+        
   syncPolicy:
     automated:
       prune: true
