--- a/manifests/argocd-apps/templates/grafana-dashboards.yaml
+++ b/manifests/argocd-apps/templates/grafana-dashboards.yaml
@@ -1,20 +1,20 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: grafana-dashboards
-  namespace: argocd
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
-spec:
-  destination:
-    server: {{ .Values.spec.destination.server }}
-    namespace: monitoring
-  project: default
-  source:
-    repoURL: https://github.com/ureuzy/playground.git
-    path: manifests/dashboards
-    targetRevision: HEAD
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+#apiVersion: argoproj.io/v1alpha1
+#kind: Application
+#metadata:
+#  name: grafana-dashboards
+#  namespace: argocd
+#  finalizers:
+#    - resources-finalizer.argocd.argoproj.io
+#spec:
+#  destination:
+#    server: {{ .Values.spec.destination.server }}
+#    namespace: monitoring
+#  project: default
+#  source:
+#    repoURL: https://github.com/ureuzy/playground.git
+#    path: manifests/dashboards
+#    targetRevision: HEAD
+#  syncPolicy:
+#    automated:
+#      prune: true
+#      selfHeal: true
