--- a/manifests/argocd-apps/templates/kubernetes-event-exporter.yaml
+++ b/manifests/argocd-apps/templates/kubernetes-event-exporter.yaml
@@ -1,56 +1,56 @@
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: kubernetes-event-exporter
-  namespace: argocd
-spec:
-  destination:
-    namespace: monitoring
-    server: https://kubernetes.default.svc
-  project: default
-  source:
-    chart: kubernetes-event-exporter
-    repoURL: registry-1.docker.io/bitnamicharts
-    targetRevision: "2.15.2"
-    helm:
-      values: |
-        config:
-          logLevel: info
-          logFormat: pretty
-          receivers:
-            - name: slack
-              webhook:
-                endpoint: ${ENDPOINT}
-                layout:
-                  attachments:
-                    - color: "#D00000"
-                      blocks:
-                        - type: "section"
-                          text:
-                            type: "mrkdwn"
-                            text: "*Message:*\n {{ `{{ .Message }}` }}"
-                        - type: "section"
-                          text:
-                            type: "mrkdwn"
-                            text: "*FirstTimestamp:*\n {{ `{{ .FirstTimestamp }}` }}"        
-                          fields:
-                            - type: "mrkdwn"
-                              text: "*Namespace:*\n {{ `{{ .Namespace }}` }}"
-                            - type: "mrkdwn"
-                              text: "*Reason:*\n {{ `{{ .Reason }}` }}"        
-                            - type: "mrkdwn"
-                              text: "*Kind:*\n {{ `{{ .InvolvedObject.Kind }}` }}"
-                            - type: "mrkdwn"
-                              text: "*Object:*\n {{ `{{ .InvolvedObject.Name }}` }}"   
-          route:
-            routes:
-              - match:
-                  - receiver: slack
-                    reason: "OOMKilled"
-  syncPolicy:
-    automated:
-      prune: true
-    syncOptions:
-      - CreateNamespace=true
----
+#---
+#apiVersion: argoproj.io/v1alpha1
+#kind: Application
+#metadata:
+#  name: kubernetes-event-exporter
+#  namespace: argocd
+#spec:
+#  destination:
+#    namespace: monitoring
+#    server: https://kubernetes.default.svc
+#  project: default
+#  source:
+#    chart: kubernetes-event-exporter
+#    repoURL: registry-1.docker.io/bitnamicharts
+#    targetRevision: "2.15.2"
+#    helm:
+#      values: |
+#        config:
+#          logLevel: info
+#          logFormat: pretty
+#          receivers:
+#            - name: slack
+#              webhook:
+#                endpoint: ${ENDPOINT}
+#                layout:
+#                  attachments:
+#                    - color: "#D00000"
+#                      blocks:
+#                        - type: "section"
+#                          text:
+#                            type: "mrkdwn"
+#                            text: "*Message:*\n {{ `{{ .Message }}` }}"
+#                        - type: "section"
+#                          text:
+#                            type: "mrkdwn"
+#                            text: "*FirstTimestamp:*\n {{ `{{ .FirstTimestamp }}` }}"
+#                          fields:
+#                            - type: "mrkdwn"
+#                              text: "*Namespace:*\n {{ `{{ .Namespace }}` }}"
+#                            - type: "mrkdwn"
+#                              text: "*Reason:*\n {{ `{{ .Reason }}` }}"
+#                            - type: "mrkdwn"
+#                              text: "*Kind:*\n {{ `{{ .InvolvedObject.Kind }}` }}"
+#                            - type: "mrkdwn"
+#                              text: "*Object:*\n {{ `{{ .InvolvedObject.Name }}` }}"
+#          route:
+#            routes:
+#              - match:
+#                  - receiver: slack
+#                    reason: "OOMKilled"
+#  syncPolicy:
+#    automated:
+#      prune: true
+#    syncOptions:
+#      - CreateNamespace=true
+#---
