--- a/manifests/argocd-apps/templates/loki-stack.yaml
+++ b/manifests/argocd-apps/templates/loki-stack.yaml
@@ -1,22 +1,22 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: loki-stack
-  namespace: argocd
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io  
-spec:
-  destination:
-    server: {{ .Values.spec.destination.server }}
-    namespace: monitoring
-  project: default
-  source:
-    repoURL: https://grafana.github.io/helm-charts
-    chart: loki-stack
-    targetRevision: 2.10.1
-  syncPolicy:
-    automated:
-      prune: true
-    syncOptions:
-    - Validate=true
-    - CreateNamespace=true
+#apiVersion: argoproj.io/v1alpha1
+#kind: Application
+#metadata:
+#  name: loki-stack
+#  namespace: argocd
+#  finalizers:
+#    - resources-finalizer.argocd.argoproj.io
+#spec:
+#  destination:
+#    server: {{ .Values.spec.destination.server }}
+#    namespace: monitoring
+#  project: default
+#  source:
+#    repoURL: https://grafana.github.io/helm-charts
+#    chart: loki-stack
+#    targetRevision: 2.10.1
+#  syncPolicy:
+#    automated:
+#      prune: true
+#    syncOptions:
+#    - Validate=true
+#    - CreateNamespace=true
