Add helmfile plugin  for argocd

--- a/manifests/argocd-apps/templates/argocd.yaml
+++ b/manifests/argocd-apps/templates/argocd.yaml
@@ -14,6 +14,21 @@ spec:
     repoURL: https://argoproj.github.io/argo-helm
     chart: argo-cd
     targetRevision: 6.6.0
+    helm:
+      values: |
+        configs:
+          cmp:
+            create: true
+            plugins:
+              helmfile:
+                discover:
+                  fileName: helmfile.yaml
+                generate:
+                  command:
+                    - bash
+                    - "-c"
+                  args:
+                    - helmfile -q template --include-crds --skip-tests
   syncPolicy:
     automated:
       selfHeal: true
