--- a/manifests/argocd-apps/templates/argocd.yaml
+++ b/manifests/argocd-apps/templates/argocd.yaml
@@ -53,6 +53,8 @@ spec:
                   name: argocd-cmp-cm
                 - mountPath: /tmp
                   name: cmp-tmp
+                - mountPath: /helm
+                  name: helm-config
           volumes:
             - name: argocd-cmp-cm
               configMap:
@@ -62,6 +64,8 @@ spec:
                     path: plugin.yaml
             - emptyDir: {}
               name: cmp-tmp
+            - emptyDir: {}
+              name: helm-config
   syncPolicy:
     automated:
       selfHeal: true
