--- a/argocd-apps/templates/argocd.yaml
+++ b/argocd-apps/templates/argocd.yaml
@@ -8,6 +8,7 @@ metadata:
   annotations:
     argocd-image-updater.argoproj.io/write-back-method: git
     argocd-image-updater.argoproj.io/git-branch: test
+    argocd-image-updater.argoproj.io/image-list: argocd
 spec:
   destination:
     server: {{ .Values.spec.destination.server }}
