--- a/argocd-apps/templates/argocd.yaml
+++ b/argocd-apps/templates/argocd.yaml
@@ -5,10 +5,10 @@ metadata:
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
-  annotations:
-    argocd-image-updater.argoproj.io/write-back-method: git
-    argocd-image-updater.argoproj.io/git-branch: test
-    argocd-image-updater.argoproj.io/image-list: argocd
+#  annotations:
+#    argocd-image-updater.argoproj.io/write-back-method: git
+#    argocd-image-updater.argoproj.io/git-branch: test
+#    argocd-image-updater.argoproj.io/image-list: argocd
 spec:
   destination:
     server: {{ .Values.spec.destination.server }}
