--- a/argocd-apps/templates/grafana.yaml
+++ b/argocd-apps/templates/grafana.yaml
@@ -6,7 +6,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
   annotations:
-    argocd-image-updater.argoproj.io/write-back-method: git
+    argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
     argocd-image-updater.argoproj.io/git-branch: test
     argocd-image-updater.argoproj.io/image-list: grafana
 spec:
