--- a/manifests/kustomize-test/base/deployment.yaml
+++ b/manifests/kustomize-test/base/deployment.yaml
@@ -1,13 +1,21 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: deployment-test
+  name: nginx-deployment
+  labels:
+    app: nginx
 spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginx
   template:
     metadata:
       labels:
-        app: deployment-test
+        app: nginx
     spec:
       containers:
         - name: nginx
-          image: nginx:alpine
+          image: nginx:1.14.2
+          ports:
+            - containerPort: 80
